# Pactsafe-Ai

./: .env.example  .gitignore  .vercelignore  ANALYSIS_REPORT.md  DEPLOY.md  README.md  _validate_gemini.py  contractAnalyzer.js  contract_analyzer.py  docker-compose.yml  package-lock.json  package.json  requirements.txt  vercel.json
apps/api/: Dockerfile  README.md  _e2e.db-journal  fly.toml  pyproject.toml  run_ground_truth.py
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 0001_initial.py  0002_add_extraction_fields.py  0003_add_model_preference.py
apps/api/app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
apps/api/app/data/demo_contracts/: README.md  contractor_agreement.txt  nda_mutual.txt  saas_terms.txt
apps/api/app/prompts/: __init__.py  contract.py
apps/api/app/routers/: analyses.py  demo.py  export.py  health.py  jobs.py
apps/api/app/schemas/: __init__.py  clause_extraction.py  risk_analysis.py
apps/api/app/services/: analyzer.py  citation_validator.py  clause_extractor.py  contract_validator.py  extraction.py  ingestion.py  result_cache.py  risk_analyzer.py  v2_pipeline.py
apps/api/app/services/llm/: __init__.py  anthropic_client.py  base.py  gemini_client.py  gemini_v2.py  groq_client.py  ollama.py  router.py
apps/api/app/workers/: background.py
apps/api/app/ws/: jobs.py
apps/api/docs/: v2_followups.md  v2_ground_truth.md
apps/api/tests/: _cache_smoke.py  _nda_smoke.py  conftest.py  run_handshake_v2.py  test_analyzer.py  test_ingestion.py  test_pass0_rejection.py  test_schemas.py
apps/api/tests/fixtures/: apex_ventures_mutual_nda.txt  handshake_ai_contractor_agreement.txt
frontend/: index.html
(+94 files in other folders)
